<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Eggster</string>
    <string name="app_ver">v 1.2</string>
    <string name="dev">Developer</string>
    <string name="dev_name">Areeb Jamal (iamareebjamal)</string>
    <string name="support_thread">Support Thread</string>
    <string name="forum">XDA Forums</string>
    <string name="check_updates">Check for updates</string>
    <string name="xposed_repo">Xposed Repo</string>
    <string name="source">Source</string>
    <string name="github">GitHub</string>
    <string name="support_xda">http://forum.xda&#8211;developers.com/xposed/modules/xposed&#8211;eggster&#8211;1&#8211;0&#8211;replace&#8211;easter&#8211;eggs&#8211;t2758583</string>
    <string name="support_repo">http://repo.xposed.info/module/areeb.xposed.eggster</string>
    <string name="support_source">https://github.com/iamareebjamal/eggster_xposed</string>
    <string name="contact">Contact</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google +</string>
    <string name="email">Email</string>
    <string name="contact_fb">http://on.fb.me/iamareebjamal</string>
    <string name="contact_twitter">http://twitter.com/iamareebjamal</string>
    <string name="contact_xda">http://forum.xda&#8211;developers.com/member.php?u=4782403</string>
    <string name="contact_google_plus">http://plus.google.com/101187817179546867616</string>
    <string name="contact_iamareebjamal">iamareebjamal</string>
    <string name="contact_jamal">jamal.areeb</string>
    <string name="contact_email">mailto:jamal.areeb@gmail.com</string>
    <string name="title_activity_plat_logo">PlatLogoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logging">Logging</string>

</resources>